fixing team icon align

--- a/src/about/css/about-tablet.css
+++ b/src/about/css/about-tablet.css
@@ -419,6 +419,7 @@
   object-fit: cover;
   position: absolute;
   top: 0;
+  margin-left: 30px;
   /*width: 140px;*/
 }
 
@@ -500,6 +501,7 @@
   object-fit: cover;
   position: absolute;
   top: 0;
+  margin-left: 30px;
   /*width: 140px;*/
 }
 
